Mobile table - select fix

--- a/css/modules/select.css
+++ b/css/modules/select.css
@@ -13,8 +13,10 @@
 }
 
 .select2 { 
-    width: 100%;
-    max-width: 330px;
+    width: 330px;
+    max-width: 100%;
+    /* width: 100%;
+    max-width: 330px; */
     font-size: 14px;
     font-weight: 500;
     color: #000000;
