--- a/css/modules/footer.css
+++ b/css/modules/footer.css
@@ -2,7 +2,8 @@ footer {
     font-family: 'Anonymous Pro', monospace;
     font-weight: bold;
     /* padding: 16px 16px 10px; */
-    padding: 24px 0 10px;
+    padding: 24px 0 135px; /*135 bottom because of mobile action bar*/
+    
 }
 
 footer h2 {
