--- a/css/layouts/sidebyside.css
+++ b/css/layouts/sidebyside.css
@@ -3,14 +3,10 @@
 }
 
 .sidebyside_left,
-.sidebyside_right {
-    background: #fbfbfb;
-    padding-top: 10px;
-}
+.sidebyside_right {background: #fbfbfb;}
 
 .sidebyside_left {
     margin-bottom: 2px;
-
 }
 
 .sidebyside_right {
@@ -37,7 +33,6 @@
     .sidebyside_left {
         margin-bottom: 0;
         margin-right: 2px;
-        padding-top: 13px;
         width: 40%;
         flex: none;
     }
