--- a/css/modules/global.css
+++ b/css/modules/global.css
@@ -19,6 +19,7 @@
     background: rgba(0, 47, 34, 0.5);
     pointer-events: none;
     opacity: 0;
+    z-index: 9;
     transition: opacity 1s ease, width 0s ease 1s;
 }
 
@@ -27,7 +28,6 @@
     opacity: 1;
     pointer-events: initial;
     transition: opacity 1s ease;
-    z-index: 3;
 }
 
 .btn {
@@ -95,12 +95,7 @@
     height: 74px;
     width: 97px;
     margin: 10px 5px;
-    border-radius: 4px;
-    transition: box-shadow 0.3s ease;
-}
-.checkBtn:hover,
-.checkBtn.active {
-    box-shadow: 0 4px 12px 0 rgba(0, 66, 55, 0.18);
+    /* border-radius: 4px; */
 }
 
 .checkBtn input {display: none;}
@@ -113,12 +108,14 @@
     padding: 10px;
     text-align: center;
     cursor: pointer;
+    border-radius: 4px;
     transition: box-shadow 0.3s ease;
 }
 .checkBtn input:checked + label,
 .checkBtn label:hover,
 .checkBtn label.active {
-    box-shadow: 0 4px 12px 0 rgba(0, 66, 55, 0.18);
+    /* box-shadow: 0 4px 12px 0 rgba(0, 66, 55, 0.18); */
+    box-shadow: 0px 5px 12px -2px rgba(0, 66, 55, 0.35);
 }
 
 .checkBtn i {
